# cloud-threat-detection-challenge

./: .gitignore  README.md  grade.py  pyproject.toml
.kiro/specs/threat-detection-challenge/: design.md  requirements.md  tasks.md
events/: PUT-EVENTS-FILE-HERE
src/: cli.py
src/detector/: pipeline.py  rules.py  sink.py  sources.py
