[project]
name = "threat-detection-challenge"
version = "0.1.0"
description = "Threat detection engineering challenge"
authors = [
    {name = "Security Team", email = "security@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "python-dateutil>=2.9.0",
    "pydantic>=2.9.2"
]

[project.scripts]
threat-detector = "src.cli:main"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
